tests/fixtures/fail/array_dynamic_index_assignment.sc
let main(): i32 = {
  let mut values = [0]
  let index = 0
  values[index] = 42
  values[0]
}
